# ekf-sim

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/eskf/: Cargo.toml
crates/eskf-cli/: Cargo.toml
crates/eskf-cli/src/: main.rs
crates/eskf-wasm/: Cargo.toml
crates/eskf-wasm/src/: lib.rs
crates/eskf/src/: filter.rs  lib.rs  linalg.rs  quat.rs  sim.rs
data/: reference-flight.csv
docs/: eskf.md
paper/: ekf-sim.tex
paper/figdata/: drift.csv  envelope.csv  nees_time.csv
scripts/: build-wasm.sh
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: analytics.ts  main.ts  mat.ts  styles.css  ui.ts
web/src/gl/: scene.ts
